--- a/contact.html
+++ b/contact.html
@@ -12,15 +12,19 @@
 
 <body>
     <header>
-        <h1>Contact Us</h1>
-        <nav>
+        <nav aria-label="primary-navigation" class="navbar">
+            <div class="nav-contanier">
+            <h3>Logo</h3>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="/#about">About <abbr title="Little Tacco Shop">LTS</abbr></a></li>
-                <li><a href="/#menu">Our Menu</a></li>
+                <li><a href="index.html">About <abbr title="Little Taco Shop">LTS</abbr></a></li>
+                <li><a href="#menu">Our Menu</a></li>
                 <li><a href="hours.html">Store Hours</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
+        </div>
         </nav>
+        <h1>Contact Us</h1>
+        
         <figure>
             <img src="images/tacos_close_up_400x260.png" alt="tacos" title="Delicious Tacos" height="260" width="400">
             <figcaption>Little Taco Shop Tacos</figcaption>
