--- a/hours.html
+++ b/hours.html
@@ -12,16 +12,18 @@
 
 <body>
     <header>
-        <h1>Litttle Taco Shop Hours</h1>
-        <nav aria-label="primary-navigation">
+        <nav aria-label="primary-navigation" class="navbar">
+            <div class="nav-contanier">
+            <h3>Logo</h3>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="/#about">About <abbr title="Little Taco Shop">LTS</abbr></a></li>
-                <li><a href="/#menu">Our Menu</a></li>
+                <li><a href="index.html">About <abbr title="Little Taco Shop">LTS</abbr></a></li>
+                <li><a href="#menu">Our Menu</a></li>
+                <li><a href="hours.html">Store Hours</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
+        </div>
         </nav>
-
+        <h1>Litttle Taco Shop Hours</h1>
         <figure>
             <img src="images/tacos_tray_400x267.png" alt="taco image" height="267" width="400 loading="eager">
             <figcaption>A Tray of Tasty Tacos</figcaption>
