--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
 
 <body>
     <header>
-        <h1>Welcome to The Litttle Taco Shop</h1>
-        <nav aria-label="primary-navigation">
+        <nav aria-label="primary-navigation" class="navbar">
+            <div class="nav-contanier">
+            <h3>Logo</h3>
             <ul>
-                <li><a href="#about">About <abbr title="Little Taco Shop">LTS</abbr></a></li>
+                <li><a href="index.html">About <abbr title="Little Taco Shop">LTS</abbr></a></li>
                 <li><a href="#menu">Our Menu</a></li>
                 <li><a href="hours.html">Store Hours</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
+        </div>
         </nav>
-
+        <h1 class="main-heading">Welcome to The Litttle Taco Shop</h1>
         <figure>
             <img src="images/tacos_and_drink_400x267.png" alt="tacos and drinks" title="We love Tacos" height="267" width="400
                 loading="eager">
